--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <a class="header__nav-link" href="#">HOME</a>
             <a class="header__nav-link" href="about.html">ABOUT US</a>
-            <a class="header__nav-link" href="#">CREATE YOUR PLAN</a>
+            <a class="header__nav-link" href="create-plan.html">CREATE YOUR PLAN</a>
 
 
         </div>
