--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                 <ul class="collection__list">
 
                     <li class="collection__list-item">
-                        <img class="list-item__image" src="./images/paket.png" alt="bu yerda rasm bor" width="255"
+                        <img class="list-item__image" src="./images/paket.png"
+                            srcset="./images/paket.png 1x, ./images/kopi4@2x.png 2x" alt="bu yerda rasm bor" width="255"
                             height="193">
                         <h3 class="list-item__heading">Gran Espresso</h3>
                         <p class="list-item__discription">Light and flavorful blend with cocoa and black pepper for an
@@ -71,7 +72,8 @@
                     </li>
 
                     <li class="collection__list-item">
-                        <img class="list-item__image" src="./images/paket.png" alt="bu yerda rasm bor" width="255"
+                        <img class="list-item__image" src="./images/paket.png"
+                            srcset="./images/paket.png 1x, ./images/kopi4@2x.png 2x" alt="bu yerda rasm bor" width="255"
                             height="193">
                         <h3 class="list-item__heading">Planalto</h3>
                         <p class="list-item__discription">Brazilian dark roast with rich and velvety body, and hints of
@@ -80,7 +82,8 @@
                     </li>
 
                     <li class="collection__list-item">
-                        <img class="list-item__image" src="./images/paket.png" alt="bu yerda rasm bor" width="255"
+                        <img class="list-item__image" src="./images/paket.png"
+                            srcset="./images/paket.png 1x, ./images/kopi4@2x.png 2x" alt="bu yerda rasm bor" width="255"
                             height="193">
                         <h3 class="list-item__heading">Piccollo</h3>
                         <p class="list-item__discription">Mild and smooth blend featuring notes of toasted almond and
@@ -89,7 +92,8 @@
                     </li>
 
                     <li class="collection__list-item">
-                        <img class="list-item__image" src="./images/paket.png" alt="bu yerda rasm bor" width="255"
+                        <img class="list-item__image" src="./images/paket.png"
+                            srcset="./images/paket.png 1x, ./images/kopi4@2x.png 2x" alt="bu yerda rasm bor" width="255"
                             height="193">
                         <h3 class="list-item__heading">Danche</h3>
                         <p class="list-item__discription">Ethiopian hand-harvested blend densely packed with vibrant
