--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
             <a class="header__nav-link" href="index.html">HOME</a>
             <a class="header__nav-link" href="#">ABOUT US</a>
-            <a class="header__nav-link" href="#">CREATE YOUR PLAN</a>
+            <a class="header__nav-link" href="create-plan.html">CREATE YOUR PLAN</a>
 
 
         </div>
@@ -51,8 +51,9 @@
 
             <div class="our-commitment-wrapper container_small">
 
-                <img class="our-commitment__image" src="./images/our-cmmitment.jpg" alt="cofe tayyorlayotgan odam rasmi"
-                    width="455" height="520">
+                <img class="our-commitment__image" src="./images/our-cmmitment.jpg"
+                    srcset="./images/our-commitment.jpg 1x, ./images/our-commitment@2x.jpg 2x"
+                    alt="cofe tayyorlayotgan odam rasmi" width="455" height="520">
 
                 <div class="our-commitment__info">
                     <h2>Our commitment</h2>
@@ -92,8 +93,9 @@
                     </p>
                 </div>
 
-                <img class="quality__image" src="./images/quality.jpg" alt="bu yerda kofeni rasmi bor" width="445"
-                    height="474">
+                <img class="quality__image" src="./images/quality.jpg"
+                    srcset="./images/quality.jpg 1x, ./images/quality@2x.jpg 2x" alt="bu yerda kofeni rasmi bor"
+                    width="445" height="474">
 
 
             </div>
